	  wether they are there or not which causes problems with
	  automake/autoconf.
	* acconfig.h: deleted because it is no longer needed with new versoins
	  of gnu autoconf/automake
	* configure.in: changed AC_DEFINEs and AC_DEFINE_UNQUOTEDs to
	  compensate for now missing acconfig.h
	* po/*.po: completed headers so that new msgfmt won't complain anymore.

2003-05-04  Christian Ruppert <arc@users.sf.net>
	* added po/Makevars

2003-04-17  Christian Ruppert <arc@users.sf.net>
	* uwm/handlers.c (HandleButtonPress): replaced XQueryPointer by
	  coordinate calculation from event structure.
	* uwm/move.c (MoveMotion): replaced XQueryPointer by coordinates
	  from event structure and XGetMotionEvents() call to get next motion
	  event.

2003-04-16  Christian Ruppert <arc@users.sf.net>
	* uwm/special.h: pointer grabs are now confined to the screen's root
	  window to avoid trouble with crashing xfree when running multiheaded
	  multiscreen.

2003-04-04  Christian Ruppert <arc@users.sf.net>
	* uwm/configconvertors.c: added derefptr macro and fixed uopt_str_fnt.
	* uwm/confparse.y: added prototype for workspace configuration
	  structure and index. parts of workspace configuration structure
	  need to be redefined, however (Wallpaper and ScreenCommand).
	* uwm/confparse.y (uwm_yy_PushContext): added initialisation of
	  uwm_workspace_settings (UWM_YY_WORKSPACE_CONTEXT).
	* uwm/confparse.y, uwm/init.c: moved definition of
	  uwm_global_settings global_settings to init.c.
	* uwm/init.c: added preprocessor ifndef/ifdef directives around
	  some stuff that is no longer needed as soon as we switch to the
	  new config parser.
	* uwm/init.c: fixed a typo in a preprocessor warning about missing
	  config.h.
	* uwm/init.c: defined global_settings with default values.
	* uwm/init.c: added new ReadConfigFile function for new configuration
	  parsing.
	* uwm/settings.h (uwm_global_settings): commented out ButtonsOnRoot